# api/docs/swagger.json
@@ -1597,9 +1597,9 @@
                 }
             }
         },
-        "/start_sale": {
+        "/start_sale_barcode": {
             "post": {
-                "description": "starting sale",
+                "description": "starting sale with barcode",
                 "consumes": [
                     "application/json"
                 ],
@@ -1607,19 +1607,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "start_sale"
+                    "start_sale_barcode"
                 ],
-                "summary": "Starting sale",
+                "summary": "Starting sale with barcode",
                 "parameters": [
                     {
-                        "description": "start_sale",
-                        "name": "start_sale",
+                        "description": "start_sale_barcode",
+                        "name": "start_sale_barcode",
                         "in": "body",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.StartSale"
-                            }
+                            "$ref": "#/definitions/models.StartSaleBarcodeReq"
                         }
                     }
                 ],
@@ -1627,7 +1624,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Sale"
+                            "$ref": "#/definitions/models.EndSaleResp"
                         }
                     },
                     "400": {
@@ -3031,6 +3028,23 @@
                 }
             }
         },
+        "models.EndSaleResp": {
+            "type": "object",
+            "properties": {
+                "product_name": {
+                    "type": "string"
+                },
+                "product_price": {
+                    "type": "integer"
+                },
+                "product_quantity": {
+                    "type": "integer"
+                },
+                "total_sum": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Product": {
             "type": "object",
             "properties": {
@@ -3199,14 +3213,17 @@
                 }
             }
         },
-        "models.StartSale": {
+        "models.StartSaleBarcodeReq": {
             "type": "object",
             "properties": {
-                "product_id": {
+                "barcode": {
                     "type": "string"
                 },
                 "quantity": {
                     "type": "integer"
+                },
+                "sale_id": {
+                    "type": "string"
                 }
             }
         },
@@ -3486,7 +3503,7 @@
             "type": "object",
             "properties": {
                 "balance": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "birth_date": {
                     "type": "string"
